inline/tests/spec/snapshots/lexer/bold/ambiguous-start.snap
---
source: inline/tests/lexer/mod.rs
info: "Test 'ambiguous-start' from 'markup/bold.yml'"
---
The next ***word** is bold.
The
^^^ -> Plain @ (1:1)->(1:4)
    
   ^ -> Whitespace @ (1:4)->(1:5)
    next
    ^^^^ -> Plain @ (1:5)->(1:9)
         
        ^ -> Whitespace @ (1:9)->(1:10)
         *
         ^ -> Plain @ (1:10)->(1:11)
          **
          ^^ -> Bold @ (1:11)->(1:13)
            word
            ^^^^ -> Plain @ (1:13)->(1:17)
                **
                ^^ -> Bold @ (1:17)->(1:19)
                   
                  ^ -> Whitespace @ (1:19)->(1:20)
                   is
                   ^^ -> Plain @ (1:20)->(1:22)
                      
                     ^ -> Whitespace @ (1:22)->(1:23)
                      bold.
                      ^^^^^ -> Plain @ (1:23)->(1:28)
                           ⏎
                           ^ -> Newline @ (1:28)->(2:1)

---
With input:

The next ***word** is bold.


