inline/tests/spec/snapshots/lexer/bold/bold-not-bold.snap
---
source: inline/tests/lexer/mod.rs
info: "Test 'bold-not-bold' from 'markup/bold.yml'"
---
**Bold** not bold.
**
^^ -> Bold @ (1:1)->(1:3)
  Bold
  ^^^^ -> Plain @ (1:3)->(1:7)
      **
      ^^ -> Bold @ (1:7)->(1:9)
         
        ^ -> Whitespace @ (1:9)->(1:10)
         not
         ^^^ -> Plain @ (1:10)->(1:13)
             
            ^ -> Whitespace @ (1:13)->(1:14)
             bold.
             ^^^^^ -> Plain @ (1:14)->(1:19)
                  ⏎
                  ^ -> Newline @ (1:19)->(2:1)

---
With input:

**Bold** not bold.


