inline/tests/spec/snapshots/lexer/bold/escaped-bold.snap
---
source: inline/tests/lexer/mod.rs
info: "Test 'escaped-bold' from 'markup/bold.yml'"
---
\*\*not bold\*\*
␢*
^^ -> Plain @ (1:1)->(1:3)
  ␢*
  ^^ -> Plain @ (1:3)->(1:5)
    not
    ^^^ -> Plain @ (1:5)->(1:8)
        
       ^ -> Whitespace @ (1:8)->(1:9)
        bold
        ^^^^ -> Plain @ (1:9)->(1:13)
            ␢*
            ^^ -> Plain @ (1:13)->(1:15)
              ␢*
              ^^ -> Plain @ (1:15)->(1:17)
                ⏎
                ^ -> Newline @ (1:17)->(2:1)

---
With input:

\*\*not bold\*\*


