inline/tests/spec/snapshots/lexer/bold/not-closed-bold.snap
---
source: inline/tests/lexer/mod.rs
info: "Test 'not-closed-bold' from 'markup/bold.yml'"
---
**not bold **
**
^^ -> Plain @ (1:1)->(1:3)
  not
  ^^^ -> Plain @ (1:3)->(1:6)
      
     ^ -> Whitespace @ (1:6)->(1:7)
      bold
      ^^^^ -> Plain @ (1:7)->(1:11)
           
          ^ -> Whitespace @ (1:11)->(1:12)
           **
           ^^ -> Plain @ (1:12)->(1:14)
             ⏎
             ^ -> Newline @ (1:14)->(2:1)

---
With input:

**not bold **


