inline/tests/spec/snapshots/lexer/bold/not-opened-bold.snap
---
source: inline/tests/lexer/mod.rs
info: "Test 'not-opened-bold' from: 'bold.yml'"
---
** not bold**
**
^^ -> Plain @ (1:1)->(1:3)
   not bold
  ^^^^^^^^^ -> Plain @ (1:3)->(1:12)
           **
           ^^ -> Plain @ (1:12)->(1:14)
             ⏎
             ^ -> Newline @ (1:14)->(2:1)

---
With input:

** not bold**


